--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev":"nodemon --exec electron ."
+    "dev": "nodemon --exec electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -20,5 +20,8 @@
   "devDependencies": {
     "electron": "^11.2.1",
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "moment": "^2.29.1"
   }
 }
