--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "electron-quick-start",
+  "name": "Quadra",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A time management app",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "dev": "nodemon --exec electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
+  "repository": "https://github.com/dranoid/Quadra",
+  "author": "Daramola Oluwadunsin",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^11.2.1",
