--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "Quadra",
+  "name": "quadra",
   "version": "1.0.0",
   "description": "A time management app",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "nodemon --exec electron ."
+    "dev": "nodemon --exec electron .",
+    "test-args":"electron main.js C:\\Users\\DG\\Desktop\\please work.qdr C:\\Users\\DG\\Desktop\\arg testQuad.qdr C:\\Users\\DG\\Desktop\\testQuad.qdr",
+    "dev-test-args":"nodemon --exec electron main.js electron main.js C:\\Users\\DG\\Desktop\\arg testQuad.qdr C:\\Users\\DG\\Desktop\\please work.qdr C:\\Users\\DG\\Desktop\\testQuad.qdr"
   },
   "repository": "https://github.com/dranoid/Quadra",
   "author": "Daramola Oluwadunsin",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^11.2.1",
+    "electron-builder": "^22.9.1",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
