--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quadra",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A time management app",
   "main": "main.js",
   "build":{
@@ -50,6 +50,7 @@
   },
   "scripts": {
     "start": "electron .",
+    "test-args":"electron main.js C:\\Users\\DG\\Desktop\\please work.qdr C:\\Users\\DG\\Desktop\\arg testQuad.qdr C:\\Users\\DG\\Desktop\\testQuad.qdr",
     "dev": "nodemon --exec electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
